<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundchess" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/Header_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:baselineAlignBottom="false"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/head_credits"
                android:textColor="@color/Orange"
                android:textSize="@dimen/header" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="center"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/tittle"
                android:textColor="@color/Orange"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/authors"
                android:textColor="@color/Orange"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/eliu"
                android:textColor="@color/Orange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/nicolas"
                android:textColor="@color/Orange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="20dp"
                android:gravity="bottom|center"
                android:text="@string/dadbm"
                android:textColor="@color/Orange"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>