<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundchess"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/Header_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:baselineAlignBottom="false"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/Azul"
                android:textSize="@dimen/header" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="center"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="114dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onPressPlay"
                android:text="@string/play"
                android:textColor="@color/Azul"
                android:textSize="@dimen/big_text" />

            <TextView
                android:id="@+id/text_scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onPressScores"
                android:text="@string/scores"
                android:textColor="@color/Azul"
                android:textSize="@dimen/big_text" />

            <TextView
                android:id="@+id/text_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onPressCredits"
                android:text="@string/credits"
                android:textColor="@color/Azul"
                android:textSize="@dimen/big_text" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
