<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:background="@drawable/backgroundchess" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:baselineAlignBottom="false"
                android:src="@drawable/ic_launcher" 
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/head_play"
                android:textColor="@color/Azul"
                android:textSize="@dimen/header" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="center"
                android:src="@drawable/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/PlayFor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Pfor"
                android:textColor="@color/Azul"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/ValPLay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/Azul"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/NQuestion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/NQuestion"
                android:textColor="@color/Azul"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/ValNQuest"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/Azul"
                android:textSize="@dimen/small_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Azul"
            android:textSize="@dimen/big_text"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="10"
            android:orientation="vertical"
            android:weightSum="4" >

            <Button
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@color/button_color"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Blanco"
                android:textColorLink="@color/button_text"
                android:textSize="@dimen/med_text" />

            <Button
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@color/button_color"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Blanco"
                android:textColorLink="@color/button_text"
                android:textSize="@dimen/med_text" />

            <Button
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@color/button_color"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:textColor="@color/Blanco"
                android:textColorLink="@color/button_text"
                android:textSize="@dimen/med_text" />

            <Button
                android:id="@+id/answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@color/button_color"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:textColor="@color/Blanco"
                android:textColorLink="@color/button_text"
                android:textSize="@dimen/med_text" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>